[package]
name = "expander-fibonacci"
version = "0.1.0"
edition = "2021"

[dependencies]
expander-rs = { git = "https://github.com/PolyhedraZK/Expander-rs.git", branch = "main"}
ark-std = "0.4"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = { version = "0.4" }
bytes = "1.6.0"
clap = { version = "4.1", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11.3"
halo2curves = { git = "https://github.com/PolyhedraZK/halo2curves", default-features = false, features = [
    "bits",
] }
itertools = "0.13"
log = "0.4"
rand = "0.8.5"
rayon = "1.10"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }
tynm = { version = "0.1.6", default-features = false }
warp = "0.3.7"
